<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="about_dialog">"InstaSaveGram version %s by Yglo Entertainment.

Please do not use this program to save photos without the permission of the respective owners.
Respect the rights of Instagram users.

If you like InstaSaveGram, please rate our app."</string>
    <string name="action_about">About</string>
    <string name="action_clear_cache">Clear image cache</string>
    <string name="action_logout">Logout from Instagram</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_save">Save</string>
    <string name="action_save_path">Set save path</string>
    <string name="action_search">Search</string>
    <string name="action_select_all">Select All</string>
    <string name="action_select_none">Deselect All</string>
    <string name="backup_confirmation">Perform the backup to \"%1$s\"?</string>
    <string name="backup_type">Backup Type</string>
    <string name="button_backup">Backup!</string>
    <string name="button_zip">Zip backup folder!</string>
    <string name="cache_cleared">Image cache cleared</string>
    <string name="cancel_label">Cancel</string>
    <string name="change">Change</string>
    <string name="confirm_label">Confirm</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name \"%s\"?</string>
    <string name="create_folder_success">Created new folder</string>
    <string name="downloading">Downloading media. Please wait...</string>
    <string name="fetching">Fetching data. Please wait...</string>
    <string name="instagram_bad_connection">"Can't connect to Instagram servers. Check your Internet."</string>
    <string name="instagram_login_error">Error logging in with Instagram. Try a bit later.</string>
    <string name="instagram_malformed_response">The servers response was malformed. Try to refresh.</string>
    <string name="instagram_private_account">This account is private. Cannot access data.</string>
    <string name="instagram_response_error">Error in the servers response: %1$d. Type: %2$s.</string>
    <string name="logged_out">Logout from Instagram successful</string>
    <string name="logging_in">Logging in. Please Wait...</string>
    <string name="login_text">Please login with your Instagram account</string>
    <string name="long_touch_help">Long touch a photo to see it in full resolution</string>
    <string name="no">No</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="ok">OK</string>
    <string name="people">People</string>
    <string name="photo_text">"Save a video with our app"</string>
    <string name="photos">Photos</string>
    <string name="pref_filter">Content Filter</string>
    <string name="preferences">Preferences</string>
    <string name="rate_button">Rate</string>
    <string name="save_and_zip_complete">All files saved and zipped successfully</string>
    <string name="save_complete">All files saved successfully</string>
    <string name="save_error">Error saving %1$d files: %2$s.</string>
    <string name="save_selected">Save %1$d files to \"%2$s\"?</string>
    <string name="saved">Saved %s files</string>
    <string name="saving_to">Saving to \"%s\"</string>
    <string name="select_one_image">Select at least one</string>
    <string name="selected_folder_label">Selected folder:</string>
    <string name="send_choose">Send to</string>
    <string name="send_confirmation">Send zip to your cloud (mail, dropbox, etc)?</string>
    <string name="time_filter">Filter by upload date</string>
    <string name="time_filter_begin">Begin Date</string>
    <string name="time_filter_end">End Date</string>
    <string name="up_label">Up</string>
    <string name="yes">Yes</string>
    <string name="zip_confirmation">Zip all the files in \"%1$s\"?</string>
    <string name="zip_error">Zip error. Check the free space in the selected directory.</string>
    <string name="ziping">Creating zip file. This may take a while.</string>
    <string name="zipped">Zipped %d files.</string>
    <string name="pref_folder_style">Save Folder Naming Style</string>
    <string name="pref_folder_style_summary">"Organize saved files by category (own/liked/feed) or by their poster's usernames"</string>
    <string name="pref_grid_size">Photo Grid Size</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">InstaSaveGram</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
