<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/topLevelRelative" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" style="@android:style/ButtonBar">
        <Button android:id="@id/btnConfirm" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/confirm_label" android:layout_weight="1.0" />
        <Button android:id="@id/btnCancel" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/cancel_label" android:layout_weight="1.0" />
    </LinearLayout>
    <RelativeLayout android:id="@id/directoryInfo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <ImageButton android:id="@id/btnNavUp" android:background="@drawable/borderless_button" android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/navigation_up" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:contentDescription="@string/up_label" />
        <TextView android:textStyle="bold" android:id="@id/txtvSelectedFolderLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/selected_folder_label" android:layout_toRightOf="@id/btnNavUp" android:layout_alignParentTop="true" />
        <TextView android:ellipsize="start" android:id="@id/txtvSelectedFolder" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:scrollHorizontally="true" android:singleLine="true" android:layout_toRightOf="@id/btnNavUp" android:layout_below="@id/txtvSelectedFolderLabel" android:layout_alignParentRight="true" />
        <View android:id="@id/divider" android:background="@color/bright_blue" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_below="@id/btnNavUp" />
    </RelativeLayout>
    <ListView android:id="@id/directoryList" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/footer" android:layout_below="@id/directoryInfo" />
</RelativeLayout>