<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/topLevelRelative" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/buttonWrapper" android:layout_width="fill_parent" android:layout_height="@dimen/item_size" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:layout_marginBottom="@dimen/activity_vertical_margin" android:layout_alignParentBottom="true">
        <Button android:id="@id/buttonBackup" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/button_backup" android:layout_weight="1.0" style="@style/backupButtonStyle" />
        <Button android:id="@id/buttonZip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/button_zip" android:layout_weight="1.0" style="@style/backupButtonStyle" />
    </LinearLayout>
    <ScrollView android:id="@id/scrollView1" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/buttonWrapper" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center" android:id="@id/linear1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/TextView01" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/backup_type" android:layout_weight="1.0" style="@style/backupButtonStyle" />
                <Spinner android:id="@id/spinnerBackupType" android:layout_width="0.0dip" android:layout_height="@dimen/item_size" android:layout_weight="1.0" />
            </LinearLayout>
            <View android:id="@id/separator1" android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/separator_margin" android:layout_marginBottom="@dimen/separator_margin" />
            <LinearLayout android:gravity="center" android:id="@id/linear2" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@id/TextView02" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/pref_filter" android:layout_weight="1.0" style="@style/backupButtonStyle" />
                <Spinner android:id="@id/spinnerContentFilter" android:layout_width="0.0dip" android:layout_height="@dimen/item_size" android:layout_weight="1.0" />
            </LinearLayout>
            <View android:id="@id/separator2" android:background="@android:color/darker_gray" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/separator_margin" android:layout_marginBottom="@dimen/separator_margin" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>